fix: привести конкурсную сборку к требованиям ТЗ
